@@ -254,7 +254,7 @@ public final class SearchSecurityRuleTranslator extends AbstractSecurityRuleTran
 		//on vérifie qu'on a bien toutes les clées.
 		final List<String> strDimensionfields = securityDimension.getFields().stream()
 				.map(DtField::name)
-				.collect(Collectors.toList());
+				.toList();
 		Assertion.check().isTrue(strDimensionfields.size() == treeKeys.length, "User securityKey for tree axes must match declared fields: ({0})", strDimensionfields);
 		if (mandatory) {
 			query.append('+');
