@@ -74,7 +74,7 @@ public final class TaskEngineProcBatch extends AbstractTaskEngineSQL {
 		final List<TaskAttribute> potentialBatchAttributes = getTaskDefinition().getInAttributes()
 				.stream()
 				.filter(inAttribute -> inAttribute.cardinality().hasMany())// multiple
-				.collect(Collectors.toList());
+				.toList();
 
 		Assertion.check().isTrue(potentialBatchAttributes.size() == 1, "For batch a single List param is required");
 		final TaskAttribute listAttribute = potentialBatchAttributes.get(0);
@@ -82,7 +82,7 @@ public final class TaskEngineProcBatch extends AbstractTaskEngineSQL {
 		final List<TaskAttribute> otherAttributes = getTaskDefinition().getInAttributes()
 				.stream()
 				.filter(inAttribute -> !inAttribute.cardinality().hasMany())// not multiple
-				.collect(Collectors.toList());
+				.toList();
 		//---
 		final List<?> list = getValue(listAttribute.name());
 		list.forEach(object -> {
