@@ -55,7 +55,7 @@ public final class SearchChunk<K extends KeyConcept> {
 	 * @return All KeyConcept's uids of this chunk
 	 */
 	public List<UID<K>> getAllUIDs() {
-		return uids.stream().map(Tuple::val1).collect(Collectors.toList());
+		return uids.stream().map(Tuple::val1).toList();
 	}
 
 	/**
