@@ -321,7 +321,7 @@ public class DbProcessSchedulerPlugin implements ProcessSchedulerPlugin, Activea
 		return definitionManager.getAllProcessDefinitionsByType(getHandledProcessType()).stream()
 				.filter(ProcessDefinition::isActive)// We only want actives
 				.filter(processDefinition -> processDefinition.getTriggeringStrategy().cronExpressionOpt().isPresent())// We only want the processes to schedule
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private static void changeState(final OProcessPlanification processPlanification, final SchedulerState planificationState) {
